--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "eslint components/**/*.js pages/**/*.js"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "form-data": "^3.0.0",
+    "googleapis": "^39.2.0",
+    "mailgun-js": "^0.22.0",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
